--- a/assets/component-sticky-collection-filters.css
+++ b/assets/component-sticky-collection-filters.css
@@ -73,7 +73,7 @@
   }
 
   .collection-filters__filters .js-clear-all-filters {
-    margin-bottom: 30px;
+    margin-bottom: 60px;
   }
 
 }
